prevent link on profile when not showing

--- a/css/demo.css
+++ b/css/demo.css
@@ -515,7 +515,7 @@ a.centerbutton {
 .card {
 	opacity: 0;
 	width: 280px;
-	z-index: 10000;
+	z-index: 0;
     padding-top: 20px;
     margin: 10px 0 20px 0;
     background-color: rgba(214, 224, 226, 0.2);
